initial changes for multi-trhead